changed for homework2

--- a/html_homework1/catalog/catalog.html
+++ b/html_homework1/catalog/catalog.html
@@ -6,23 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        li {
-            display: inline-block;
-            text-align: center;
-            width: 300px;
-            height: 300px;
-            padding: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <a href="../index.html">Главная</a>
-    <a href="catalog.html">Каталог</a>
-    <a href="../contacts.html">Контакты</a>
-    <h1>Каталог</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto ipsam ea itaque? Culpa quod voluptatibus
+
+    <a class="menu-link" href="../index.html">Главная</a>
+    <a class="menu-link" href="catalog/catalog.html">Каталог</a>
+    <a class="menu-link" href="../contacts.html">Контакты</a>
+
+    <h1 class="header1"> Каталог</h1>
+    <p class="paragraf">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto ipsam ea itaque? Culpa quod
+        voluptatibus
         cumque enim tenetur sunt vitae est totam porro ex perspiciatis id, tempore inventore necessitatibus
         consequuntur. Atque cum laudantium possimus repudiandae commodi ducimus quia sunt illo, assumenda unde
         distinctio, quis reiciendis culpa optio rerum cupiditate in tenetur voluptatibus vel. Animi nostrum omnis,
@@ -32,7 +27,8 @@
         mollitia natus, fuga temporibus? Temporibus perspiciatis eligendi quibusdam, distinctio quisquam quasi
         cupiditate aut, dolore dignissimos modi itaque maiores. Modi id ad similique fugit maxime molestiae ea culpa
         voluptatum, mollitia iusto distinctio rerum! Est facere facilis incidunt quos ex. Natus, eaque fugiat tempora,
-        id laborum corrupti optio at vel impedit, consequatur ducimus?</p>
+        id laborum corrupti optio at vel impedit, consequatur ducimus?
+    </p>
     <ul>
         <li>
             <h5>Домашний хлеб</h5>
