--- a/html_homework1/index.html
+++ b/html_homework1/index.html
@@ -6,23 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <a href="index.html">Главная</a>
-    <a href="catalog/catalog.html">Каталог</a>
-    <a href="contacts.html">Контакты</a>
-    <h1>Главная страница</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae a animi, repellat commodi architecto neque at,
+    <a class="menu-link" href="index.html">Главная</a>
+    <a class="menu-link" href="catalog/catalog.html">Каталог</a>
+    <a class="menu-link" href="contacts.html">Контакты</a>
+    <h1 class="header1">Главная страница</h1>
+    <p class="paragraf">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae a animi, repellat commodi
+        architecto neque at,
         eaque modi rem dolores officia id autem est ipsum qui reiciendis unde! Adipisci, fuga.</p>
-    <h2>Добро пожаловать на сайт</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, recusandae placeat exercitationem sequi eos sunt.
+    <h2 class="header2">Добро пожаловать на сайт</h2>
+    <p class="paragraf">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, recusandae placeat exercitationem
+        sequi eos sunt.
         Facilis natus similique quia exercitationem odio quisquam fuga minima, veritatis nam, quae perferendis maiores
         commodi!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit excepturi dignissimos labore vitae ipsum
+    <p class="paragraf">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit excepturi dignissimos labore vitae
+        ipsum
         voluptates. Cumque, sapiente dolor? Odit nemo aspernatur voluptatibus quae, omnis enim. Laudantium dolores odio
         aliquid saepe!</p>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores consequuntur magnam eaque? Molestias sint
+    <p class="paragraf">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores consequuntur magnam eaque?
+        Molestias sint
         atque doloribus modi incidunt unde, pariatur maiores error veniam cum excepturi? Ullam amet reprehenderit sit
         tenetur.</p>
 </body>
