--- a/html_homework1/contacts.html
+++ b/html_homework1/contacts.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <a href="index.html">Главная</a>
-    <a href="catalog/catalog.html">Каталог</a>
-    <a href="contacts.html">Контакты</a>
-    <h2>Наши контакты</h2>
+    <a class="menu-link" href="index.html">Главная</a>
+    <a class="menu-link" href="catalog/catalog.html">Каталог</a>
+    <a class="menu-link" href="contacts.html">Контакты</a>
+    <h2 class="header2">Наши контакты</h2>
 </body>
 
 </html>
