--- a/html_homework1/catalog/catalog.html
+++ b/html_homework1/catalog/catalog.html
@@ -29,18 +29,18 @@
         voluptatum, mollitia iusto distinctio rerum! Est facere facilis incidunt quos ex. Natus, eaque fugiat tempora,
         id laborum corrupti optio at vel impedit, consequatur ducimus?
     </p>
-    <ul>
-        <li>
+    <ul class="list">
+        <li class="element">
             <h5>Домашний хлеб</h5>
             <img src="../img/bread1.avif" width="250" height="200" alt="Хлеб домашний">
             <p>Заварной хлеб по старинному рецепту</p>
         </li>
-        <li>
+        <li class="element">
             <h5>Хлеб</h5>
             <img src="../img/bread2.avif" width="250" height="200" alt="Хлеб">
             <p>Багет пшеничный из нашей пекарни</p>
         </li>
-        <li>
+        <li class="element">
             <h5>Круассан</h5>
             <img src="../img/croissants.avif" width="250" height="200" alt="Круассан">
             <p>Круассан на сливочном масле</p>
