--- a/html_homework3/index.html
+++ b/html_homework3/index.html
@@ -12,23 +12,25 @@
 <body>
     <div class="top">
         <div class="header">
-            <img class="header_logo" src="image/header_logo.svg" alt="header_logo">
-            <a class="header_link" href="#">Home</a>
-            <a class="header_link" href="#">About Us</a>
-            <a class="header_link" href="#">Services</a>
-            <a class="header_link" href="#">Features</a>
-            <a class="header_link" href="#">Team</a>
-            <a class="header_link" href="#">Blog</a>
-            <a class="header_link" href="#">Contact</a>
+            <img src="image/header_logo.svg" alt="header_logo">
+            <div class="header__links">
+                <a class="header_link" href="#">Home</a>
+                <a class="header_link" href="#">About Us</a>
+                <a class="header_link" href="#">Services</a>
+                <a class="header_link" href="#">Features</a>
+                <a class="header_link" href="#">Team</a>
+                <a class="header_link" href="#">Blog</a>
+                <a class="header_link" href="#">Contact</a>
+            </div>
         </div>
-        <div class="top_content">
+        <div class="top__content">
             <div class="top_info">
                 <h1 class="title">SEO & Digital Marketing For Your Website.</h1>
                 <p class="text">Provide all kind of seo services and help to improve seo ranking. Globally incubate
                     standards.</p>
                 <div class="top_buttons">
                     <button class="button">Start Now</button>
-                    <button class="button">Watch Video</button>
+                    Watch Video
                 </div>
             </div>
             <img class="content_image" src="image/top_image.svg" alt="top_image">
