--- a/html_homework1/catalog/catalog.html
+++ b/html_homework1/catalog/catalog.html
@@ -16,7 +16,7 @@
     <a class="menu-link" href="../contacts.html">Контакты</a>
 
     <h1 class="header1"> Каталог</h1>
-    <p class="paragraf">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto ipsam ea itaque? Culpa quod
+    <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto ipsam ea itaque? Culpa quod
         voluptatibus
         cumque enim tenetur sunt vitae est totam porro ex perspiciatis id, tempore inventore necessitatibus
         consequuntur. Atque cum laudantium possimus repudiandae commodi ducimus quia sunt illo, assumenda unde
@@ -43,7 +43,8 @@
         <li class="element">
             <h5>Круассан</h5>
             <img src="../img/croissants.avif" width="250" height="200" alt="Круассан">
-            <p>Круассан на сливочном масле</p>
+            <p>Круассан на сливочном
+                масле</p>
 
         </li>
     </ul>
