--- a/html_homework4/index.html
+++ b/html_homework4/index.html
@@ -17,7 +17,7 @@
         <div class="header center">
             <img src="image/header_logo.svg" alt="header_logo">
             <div class="header__links">
-                <a class="header_link_home" href="#">Home</a>
+                <a class="header_link link_home" href="#">Home</a>
                 <a class="header_link" href="#">About Us</a>
                 <a class="header_link" href="#">Services</a>
                 <a class="header_link" href="#">Features <svg width="8" height="5" viewBox="0 0 8 5" fill="none"
