--- a/html_homework4/index.html
+++ b/html_homework4/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="top">
         <div class="header center">
-            <img src="image/header_logo.svg" alt="header_logo">
+            <a href="#"><img src="image/header_logo.svg" alt="header_logo"></a>
             <div class="header__links">
                 <a class="header_link link_home" href="#">Home</a>
                 <a class="header_link" href="#">About Us</a>
