--- a/html_homework3/index.html
+++ b/html_homework3/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="top">
         <div class="header">
-            <img src="image/header_logo.svg" alt="header_logo">
+            <a href="#"><img src="image/header_logo.svg" alt="header_logo"></a>
             <div class="header__links">
                 <a class="header_link" href="#">Home</a>
                 <a class="header_link" href="#">About Us</a>
