--- a/html_homework5/index.html
+++ b/html_homework5/index.html
@@ -29,14 +29,15 @@
                 <a class="header_link" href="#">Contact</a>
             </div>
         </div>
-        <div class="top__content center">
+        <div class="top__content">
             <div class="top_info">
                 <h1 class="title">SEO & Digital Marketing For Your Website.</h1>
                 <p class="text">Provide all kind of seo services and help to improve seo ranking. Globally incubate
                     standards.</p>
                 <div class="top_buttons">
-                    <button class="button button_start">Start Now</button>
-                    <button class="button button_no_borders">Watch Video</button>
+                    <button class="button button_start"><a class="button_link_white" href="#">Start Now</a></button>
+                    <button class="button button_no_borders"><a class="button_link_grey" href="#">Watch
+                            Video</a></button>
                 </div>
             </div>
             <img class="content__image" src="image/top_image.svg" alt="top_image">
@@ -81,21 +82,21 @@
                 <h3 class="item__title">Keyword Research</h3>
                 <p class="item__text">Business applications through revolutionary catalysts for chang the Seamlessly
                     underwhelm dures.</p>
-                <button class="item__button"><img src="image/learn_more.svg" alt=""></button>
+                <button class="item__button"><a href="#"><img src="image/learn_more.svg" alt=""></a></button>
             </div>
-            <div class="item">
+            <div class="item item__center">
                 <img src="image/illustration2.svg" alt="" class="item_img">
                 <h3 class="item__title">Seo Optimazation</h3>
                 <p class="item__text">Business applications through revolutionary catalysts for chang the Seamlessly
                     underwhelm dures.</p>
-                <button class="item__button"><img src="image/learn_more.svg" alt=""></button>
+                <button class="item__button"><a href="#"><img src="image/learn_more.svg" alt=""></a></button>
             </div>
             <div class="item">
                 <img src="image/illustration3.svg" alt="" class="item_img">
                 <h3 class="item__title">Social Marketing</h3>
                 <p class="item__text">Business applications through revolutionary catalysts for chang the Seamlessly
                     underwhelm dures.</p>
-                <button class="item__button"><img src="image/learn_more.svg" alt=""></button>
+                <button class="item__button"><a href="#"><img src="image/learn_more.svg" alt=""></a></button>
             </div>
         </div>
     </div>
