--- a/html_lesson3_4_5/index.html
+++ b/html_lesson3_4_5/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Project</title>
+    <title>Lesson 3_4_5</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;800&display=swap" rel="stylesheet">
@@ -13,15 +13,15 @@
 </head>
 
 <body>
-    <div class="top">
-        <div class="header center">
+    <div class="top center">
+        <div class="header">
             <a class="header__link" href="#">Home</a>
             <a class="header__link" href="#">About</a>
             <a class="header__link" href="#">Services</a>
             <a class="header__link" href="#">Blog</a>
             <a class="header__link" href="#">Contact</a>
         </div>
-        <div class="top_content center">
+        <div class="top_content">
             <div class="top_info">
                 <h3 class="subtitle">Next genaretion platform</h3>
                 <h1 class="title">Artificial intelligence & Syber security</h1>
@@ -40,14 +40,14 @@
             <img src="image/top_image.svg" alt="top_image">
         </div>
 
-        <div class="logo center">
+        <div class="logo">
             <img src="image/logo 1.svg" alt="logo1">
             <img src="image/logo 2.svg" alt="logo2">
             <img src="image/logo 3.svg" alt="logo3">
             <img src="image/logo 4.svg" alt="logo4">
         </div>
     </div>
-    <div class="content">
+    <div class="content center">
         <div class="item">
             <img src="image/item_1.svg" alt="" class="item_image">
             <h3 class="item_title">Expert Prespective Agency Awards</h3>
@@ -70,7 +70,7 @@
                 officia veniam.</p>
         </div>
         <div class="item item_big">
-            <img src="image/item_4.svg" alt="" class="item_image">
+            <img src="image/item_4.svg" alt="" class="item_image_big">
             <h3 class="item_title">In print, and publishing industries for previewing layouts and visual mockups.</h3>
             <p class="item_text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for
                 previewing layouts and visual mockups. Lorem ipsum is placeholder text commonly used in print, and
