--- a/html_homework6/index.html
+++ b/html_homework6/index.html
@@ -59,7 +59,7 @@
         <h2 class="products__subtitle">Shop for items based on what we featured in this week</h2>
         <div class="products__content">
             <div class="products__item">
-                <img src="image/product_foto_1.png" alt="" class="products__foto">
+                <a href="" class="product_link"><img src="image/product_foto_1.png" alt="" class="products__foto"></a>
                 <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
                 <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of
                     cool Kym Ellery teams up with Moda Operandi.</p>
@@ -67,7 +67,7 @@
 
             </div>
             <div class="products__item">
-                <img src="image/product_foto_2.png" alt="" class="products__foto">
+                <a href="" class="product_link"><img src="image/product_foto_2.png" alt="" class="products__foto"></a>
                 <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
                 <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of
                     cool Kym Ellery teams up with Moda Operandi.</p>
@@ -75,7 +75,7 @@
 
             </div>
             <div class="products__item">
-                <img src="image/product_foto_3.png" alt="" class="products__foto">
+                <a href="" class="product_link"><img src="image/product_foto_3.png" alt="" class="products__foto"></a>
                 <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
                 <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of
                     cool Kym Ellery teams up with Moda Operandi.</p>
@@ -83,7 +83,7 @@
 
             </div>
             <div class="products__item">
-                <img src="image/product_foto_4.png" alt="" class="products__foto">
+                <a href="" class="product_link"><img src="image/product_foto_4.png" alt="" class="products__foto"></a>
                 <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
                 <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of
                     cool Kym Ellery teams up with Moda Operandi.</p>
@@ -91,7 +91,7 @@
 
             </div>
             <div class="products__item">
-                <img src="image/product_foto_5.png" alt="" class="products__foto">
+                <a href="" class="product_link"><img src="image/product_foto_5.png" alt="" class="products__foto"></a>
                 <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
                 <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of
                     cool Kym Ellery teams up with Moda Operandi.</p>
@@ -99,7 +99,7 @@
 
             </div>
             <div class="products__item">
-                <img src="image/product_foto_6.png" alt="" class="products__foto">
+                <a href="" class="product_link"><img src="image/product_foto_6.png" alt="" class="products__foto"></a>
                 <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
                 <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of
                     cool Kym Ellery teams up with Moda Operandi.</p>
