--- a/html_homework6/index.html
+++ b/html_homework6/index.html
@@ -59,51 +59,63 @@
         <h2 class="products__subtitle">Shop for items based on what we featured in this week</h2>
         <div class="products__content">
             <div class="products__item">
-                <a href="" class="product_link"><img src="image/product_foto_1.png" alt="" class="products__foto"></a>
-                <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
-                <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of
-                    cool Kym Ellery teams up with Moda Operandi.</p>
-                <p class="product__price">$52.00</p>
+                <a href="#" class="product_link"><img src="image/product_foto_1.png" alt="" class="products__foto">
+                    <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
+                    <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter
+                        of
+                        cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="product__price">$52.00</p>
+                </a>
 
             </div>
             <div class="products__item">
-                <a href="" class="product_link"><img src="image/product_foto_2.png" alt="" class="products__foto"></a>
-                <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
-                <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of
-                    cool Kym Ellery teams up with Moda Operandi.</p>
-                <p class="product__price">$52.00</p>
+                <a href="#" class="product_link"><img src="image/product_foto_2.png" alt="" class="products__foto">
+                    <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
+                    <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter
+                        of
+                        cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="product__price">$52.00</p>
+                </a>
 
             </div>
             <div class="products__item">
-                <a href="" class="product_link"><img src="image/product_foto_3.png" alt="" class="products__foto"></a>
-                <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
-                <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of
-                    cool Kym Ellery teams up with Moda Operandi.</p>
-                <p class="product__price">$52.00</p>
+                <a href="#" class="product_link"><img src="image/product_foto_3.png" alt="" class="products__foto">
+                    <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
+                    <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter
+                        of
+                        cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="product__price">$52.00</p>
+                </a>
 
             </div>
             <div class="products__item">
-                <a href="" class="product_link"><img src="image/product_foto_4.png" alt="" class="products__foto"></a>
-                <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
-                <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of
-                    cool Kym Ellery teams up with Moda Operandi.</p>
-                <p class="product__price">$52.00</p>
+                <a href="#" class="product_link"><img src="image/product_foto_4.png" alt="" class="products__foto">
+                    <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
+                    <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter
+                        of
+                        cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="product__price">$52.00</p>
+                </a>
 
             </div>
             <div class="products__item">
-                <a href="" class="product_link"><img src="image/product_foto_5.png" alt="" class="products__foto"></a>
-                <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
-                <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of
-                    cool Kym Ellery teams up with Moda Operandi.</p>
-                <p class="product__price">$52.00</p>
+                <a href="#" class="product_link"><img src="image/product_foto_5.png" alt="" class="products__foto">
+                    <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
+                    <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter
+                        of
+                        cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="product__price">$52.00</p>
+                </a>
 
             </div>
             <div class="products__item">
-                <a href="" class="product_link"><img src="image/product_foto_6.png" alt="" class="products__foto"></a>
-                <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
-                <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of
-                    cool Kym Ellery teams up with Moda Operandi.</p>
-                <p class="product__price">$52.00</p>
+                <a href="#" class="product_link"><img src="image/product_foto_6.png" alt="" class="products__foto">
+                    <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
+                    <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter
+                        of
+                        cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="product__price">$52.00</p>
+                </a>
 
             </div>
         </div>
