--- a/html_lesson3_4_5_6/index.html
+++ b/html_lesson3_4_5_6/index.html
@@ -21,7 +21,7 @@
             <a class="header__link" href="#">Blog</a>
             <a class="header__link" href="#">Contact</a>
         </div>
-        <div class="top_content">
+        <div class="top_content center">
             <div class="top_info">
                 <h3 class="subtitle">Next genaretion platform</h3>
                 <h1 class="title">Artificial intelligence & Syber security</h1>
@@ -37,7 +37,7 @@
                     </button>
                 </div>
             </div>
-            <img src="image/top_image.svg" alt="top_image">
+            <img src="image/top_image.svg" alt="top_image" class="picture center">
         </div>
 
         <div class="logo">
