--- a/html_homework6_7/index.html
+++ b/html_homework6_7/index.html
@@ -33,16 +33,13 @@
             </div>
         </div>
         <div class="top__content">
-            <div class="top__image">
-                <img src="image/top_image.png" alt="">
+            <img class="top__image" src="image/top_image.png" alt="">
+            <img class="title__rectangle" src="image/title_rectangle.svg" alt="">
+            <div class="titles">
+                <h1 class="title">THE BRAND</h1>
+                <h2 class="subtitle">OF LUXERIOUS <span class="color_subtitle">FASHION</span></h2>
             </div>
-            <div class="title__box">
-                <img class="title__rectangle" src="image/title_rectangle.svg" alt="">
-                <div class="titles">
-                    <h1 class="title">THE BRAND</h1>
-                    <h2 class="subtitle">OF LUXERIOUS <span class="color_subtitle">FASHION</span></h2>
-                </div>
-            </div>
+
         </div>
     </div>
     <div class="offer center">
@@ -58,8 +55,8 @@
         <h1 class="products__title">Fetured Items</h1>
         <h2 class="products__subtitle">Shop for items based on what we featured in this week</h2>
         <div class="products__content">
-            <div class="products__item">
-                <a href="#" class="product_link"><img src="image/product_foto_1.png" alt="" class="products__foto">
+            <div class="product__item">
+                <a href="#" class="product_link"><img src="image/product_foto_1.png" alt="" class="product__foto">
                     <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
                     <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter
                         of
@@ -68,8 +65,8 @@
                 </a>
 
             </div>
-            <div class="products__item">
-                <a href="#" class="product_link"><img src="image/product_foto_2.png" alt="" class="products__foto">
+            <div class="product__item">
+                <a href="#" class="product_link"><img src="image/product_foto_2.png" alt="" class="product__foto">
                     <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
                     <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter
                         of
@@ -78,8 +75,8 @@
                 </a>
 
             </div>
-            <div class="products__item">
-                <a href="#" class="product_link"><img src="image/product_foto_3.png" alt="" class="products__foto">
+            <div class="product__item">
+                <a href="#" class="product_link"><img src="image/product_foto_3.png" alt="" class="product__foto">
                     <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
                     <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter
                         of
@@ -88,8 +85,8 @@
                 </a>
 
             </div>
-            <div class="products__item">
-                <a href="#" class="product_link"><img src="image/product_foto_4.png" alt="" class="products__foto">
+            <div class="product__item">
+                <a href="#" class="product_link"><img src="image/product_foto_4.png" alt="" class="product__foto">
                     <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
                     <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter
                         of
@@ -98,8 +95,8 @@
                 </a>
 
             </div>
-            <div class="products__item">
-                <a href="#" class="product_link"><img src="image/product_foto_5.png" alt="" class="products__foto">
+            <div class="product__item">
+                <a href="#" class="product_link"><img src="image/product_foto_5.png" alt="" class="product__foto">
                     <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
                     <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter
                         of
@@ -108,8 +105,8 @@
                 </a>
 
             </div>
-            <div class="products__item">
-                <a href="#" class="product_link"><img src="image/product_foto_6.png" alt="" class="products__foto">
+            <div class="product__item">
+                <a href="#" class="product_link"><img src="image/product_foto_6.png" alt="" class="product__foto">
                     <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
                     <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian arbiter
                         of
@@ -119,9 +116,8 @@
 
             </div>
         </div>
+        <button type="button" class="browse__button">Browse All Product</button>
     </div>
-
-
 </body>
 
 </html>
