--- a/html_homework6_7_8/index.html
+++ b/html_homework6_7_8/index.html
@@ -27,7 +27,7 @@
                 <a class="header__link-site" href="cart.html"><img src="image/cart.svg" alt="cart"></a>
             </nav>
         </div>
-        <div class="top__content">
+        <div class="top__content center_wide">
             <img class="top__image" src="image/top_image.png" alt="">
 
             <div class="top__titles">
@@ -118,8 +118,54 @@
 
             </div>
         </div>
-        <button type="button" class="browse__button">Browse All Product</button>
+        <a href="#" class="browse__button">Browse All Product</a>
     </section>
+    <section class="advantages center_wide">
+        <article class="advantages__item">
+            <img src="image/Free Delivery_icon.svg" alt="free delivery">
+            <h3 class="advantages__title">Free Delivery</h3>
+            <p class="advantages__text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with
+                extensive models.</p>
+        </article>
+        <article class="advantages__item">
+            <img src="image/Sales & discounts_icon.svg" alt="sales & discounts">
+            <h3 class="advantages__title">Sales & discounts</h3>
+            <p class="advantages__text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with
+                extensive models.</p>
+        </article>
+        <article class="advantages__item">
+            <img src="image/Quality assurance_icon.svg" alt="quality assurance">
+            <h3 class="advantages__title">Quality assurance</h3>
+            <p class="advantages__text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with
+                extensive models.</p>
+        </article>
+    </section>
+    <article class="subscribe center_wide">
+        <aside class="subscribe__item subscribe__item_left">
+            <img src="image/Intersect.png" alt="photo" class="subscribe__item__foto">
+            <p class="subscribe__quote">“Vestibulum quis porttitor dui!<br> Quisque viverra nunc mi, <i>a pulvinar
+                    purus<br>condimentum“</i></p>
+        </aside>
+        <div class="subscribe__item">
+            <h2 class="subscribe__title">SUBSCRIBE<br>
+                <span class="subscribe__text">FOR OUR NEWSLETTER AND PROMOTION</span>
+            </h2>
+            <div class="subscribe__form">
+                <label for="mail"></label>
+                <input class="input__email" required type="email" id="mail" placeholder="Enter Your Email">
+                <button type="submit" class="subscribe__button">Subscribe</button>
+            </div>
+        </div>
+    </article>
+    <footer class="footer center_wide">
+        <p class="footer__brand">© 2022 Brand All Rights Reserved.</p>
+        <div class="footer__links">
+            <a href="#" class="footer__link"><img src="image/5.svg" alt=""></a>
+            <a href="#" class="footer__link"><img src="image/4.svg" alt=""></a>
+            <a href="#" class="footer__link"><img src="image/6.svg" alt=""></a>
+            <a href="#" class="footer__link"><img src="image/2.svg" alt=""></a>
+        </div>
+    </footer>
 </body>
 
 </html>
