--- a/html_lesson_8/index.html
+++ b/html_lesson_8/index.html
@@ -14,7 +14,7 @@
         <h2>Заполните форму</h2>
         <form action="#" class="form">
             <label for="name">Имя</label>
-            <input autofocus required type="text" id="name">
+            <input class="rounded" autofocus required type="text" id="name">
             <label for="mail">Email</label>
             <input required type="email" id="mail">
             <label for="password">Пароль</label>
