--- a/homework_6_7_8_9/index.html
+++ b/homework_6_7_8_9/index.html
@@ -120,7 +120,7 @@
         </div>
         <a href="#" class="browse__button">Browse All Product</a>
     </section>
-    <section class="advantages center_wide">
+    <section class="advantages center">
         <article class="advantages__item">
             <img src="image/Free Delivery_icon.svg" alt="free delivery">
             <h3 class="advantages__title">Free Delivery</h3>
@@ -140,12 +140,13 @@
                 extensive models.</p>
         </article>
     </section>
-    <article class="subscribe center_wide">
+    <article class="subscribe">
         <aside class="subscribe__item subscribe__item_left">
             <img src="image/Intersect.png" alt="photo" class="subscribe__item__foto">
-            <p class="subscribe__quote">“Vestibulum quis porttitor dui!<br> Quisque viverra nunc mi, <i>a pulvinar
-                    purus<br>condimentum“</i></p>
+            <p class="subscribe__quote">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a <i>pulvinar purus
+                    condimentum“</i></p>
         </aside>
+
         <div class="subscribe__item">
             <h2 class="subscribe__title">SUBSCRIBE<br>
                 <span class="subscribe__text">FOR OUR NEWSLETTER AND PROMOTION</span>
@@ -157,7 +158,7 @@
             </div>
         </div>
     </article>
-    <footer class="footer center_wide">
+    <footer class="footer center">
         <p class="footer__brand">© 2022 Brand All Rights Reserved.</p>
         <div class="footer__links">
             <a href="#" class="footer__link"><img src="image/5.svg" alt=""></a>
