--- a/homework_6_7_8_9/index.html
+++ b/homework_6_7_8_9/index.html
@@ -143,7 +143,8 @@
     <article class="subscribe">
         <aside class="subscribe__item subscribe__item_left">
             <img src="image/Intersect.png" alt="photo" class="subscribe__item__foto">
-            <p class="subscribe__quote">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a <i>pulvinar purus
+            <p class="subscribe__quote">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a <i>pulvinar
+                    purus
                     condimentum“</i></p>
         </aside>
 
