--- a/homework_6_7_8_9/index.html
+++ b/homework_6_7_8_9/index.html
@@ -22,10 +22,53 @@
                 <a href=""><img src="image/search.svg" alt=""></a>
             </div>
             <nav class="header__right">
-                <label for="header__check"><img src="image/menu.svg" alt="menu"></label>
-                <a class="header__link-site" href="registration.html"><img src="image/reg.svg" alt="reg"></a>
-                <a class="header__link-site" href="cart.html"><img src="image/cart.svg" alt="cart"></a>
+                <label for="header__checkbox"><img src="image/menu.svg" alt="menu"></label>
+                <a class="header__registration" href="registration.html"><img src="image/reg.svg" alt="reg"></a>
+                <a href="cart.html">
+                    <div class="header__cart">
+                        <img src="image/cart.svg" alt="" class="basket">
+                        <div class="header__cart__counter"> 5
+                        </div>
+                    </div>
+                </a>
             </nav>
+            <input class="header__check" id="header__checkbox" type="checkbox">
+            <div class="menu">
+                <h3 class="menu__general__title">MENU</h3>
+                <div class="menu__box">
+                    <ul class="menu__list menu__general">
+                        <li><a href="#" class="menu__detail__title">MAN</a>
+                            <ul class="menu__list menu__detail">
+                                <li><a class="menu__link" href="#">Accessories</a></li>
+                                <li><a class="menu__link" href="#">Bags</a></li>
+                                <li><a class="menu__link" href="#">Denim</a></li>
+                                <li><a class="menu__link" href="#">T-Shirts</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#" class="menu__detail__title">WOMAN</a>
+                            <ul class="menu__list menu__detail">
+                                <li><a class="menu__link" href="#">Accessories</a></li>
+                                <li><a class="menu__link" href="#">Jackets & Coats</a></li>
+                                <li><a class="menu__link" href="#">Polos</a></li>
+                                <li><a class="menu__link" href="#">T-Shirts</a></li>
+                                <li><a class="menu__link" href="#">Shirts</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#" class="menu__detail__title">KIDS</a>
+                            <ul class="menu__list menu__detail">
+                                <li><a class="menu__link" href="#">Accessories</a></li>
+                                <li><a class="menu__link" href="#">Jackets & Coats</a></li>
+                                <li><a class="menu__link" href="#">Polos</a></li>
+                                <li><a class="menu__link" href="#">T-Shirts</a></li>
+                                <li><a class="menu__link" href="#">Shirts</a></li>
+                                <li><a class="menu__link" href="#">Bags</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+
+
+            </div>
         </div>
         <div class="top__content center_wide">
             <img class="top__image" src="image/top_image.png" alt="">
