--- a/homework_6_7_8_9/index.html
+++ b/homework_6_7_8_9/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Homework 6-9 </title>
+    <title>Homework html</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -102,12 +102,12 @@
                 <div class="product__item">
                     <a href="#" class="product_link">
                         <img src="image/product_foto_1.png" alt="" class="product__foto">
-                        <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
-                        <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
-                            arbiter
-                            of
-                            cool Kym Ellery teams up with Moda Operandi.</p>
-                        <p class="product__price">$52.00</p>
+                        <div class="product__info">
+                            <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
+                            <p class="product__text">Known for her sculptural takes on&nbsp;traditional tailoring,
+                                Australian arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.</p>
+                            <p class="product__price">$52.00</p>
+                        </div>
                     </a>
                     <button class="product__button"><svg width="27" height="25" viewBox="0 0 27 25" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
@@ -128,12 +128,12 @@
                 <div class="product__item">
                     <a href="#" class="product_link">
                         <img src="image/product_foto_2.png" alt="" class="product__foto">
-                        <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
-                        <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
-                            arbiter
-                            of
-                            cool Kym Ellery teams up with Moda Operandi.</p>
-                        <p class="product__price">$52.00</p>
+                        <div class="product__info">
+                            <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
+                            <p class="product__text">Known for her sculptural takes on&nbsp;traditional tailoring,
+                                Australian arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.</p>
+                            <p class="product__price">$52.00</p>
+                        </div>
                     </a>
                     <button class="product__button"><svg width="27" height="25" viewBox="0 0 27 25" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
@@ -154,12 +154,12 @@
                 <div class="product__item">
                     <a href="#" class="product_link">
                         <img src="image/product_foto_3.png" alt="" class="product__foto">
-                        <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
-                        <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
-                            arbiter
-                            of
-                            cool Kym Ellery teams up with Moda Operandi.</p>
-                        <p class="product__price">$52.00</p>
+                        <div class="product__info">
+                            <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
+                            <p class="product__text">Known for her sculptural takes on&nbsp;traditional tailoring,
+                                Australian arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.</p>
+                            <p class="product__price">$52.00</p>
+                        </div>
                     </a>
                     <button class="product__button"><svg width="27" height="25" viewBox="0 0 27 25" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
@@ -180,12 +180,12 @@
                 <div class="product__item">
                     <a href="#" class="product_link">
                         <img src="image/product_foto_4.png" alt="" class="product__foto">
-                        <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
-                        <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
-                            arbiter
-                            of
-                            cool Kym Ellery teams up with Moda Operandi.</p>
-                        <p class="product__price">$52.00</p>
+                        <div class="product__info">
+                            <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
+                            <p class="product__text">Known for her sculptural takes on&nbsp;traditional tailoring,
+                                Australian arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.</p>
+                            <p class="product__price">$52.00</p>
+                        </div>
                     </a>
                     <button class="product__button"><svg width="27" height="25" viewBox="0 0 27 25" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
@@ -206,11 +206,12 @@
                 <div class="product__item">
                     <a href="#" class="product_link">
                         <img src="image/product_foto_5.png" alt="" class="product__foto">
-                        <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
-                        <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
-                            arbiter
-                            of cool Kym Ellery teams up with Moda Operandi.</p>
-                        <p class="product__price">$52.00</p>
+                        <div class="product__info">
+                            <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
+                            <p class="product__text">Known for her sculptural takes on&nbsp;traditional tailoring,
+                                Australian arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.</p>
+                            <p class="product__price">$52.00</p>
+                        </div>
                     </a>
                     <button class="product__button"><svg width="27" height="25" viewBox="0 0 27 25" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
@@ -231,12 +232,12 @@
                 <div class="product__item">
                     <a href="#" class="product_link">
                         <img src="image/product_foto_6.png" alt="" class="product__foto">
-                        <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
-                        <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
-                            arbiter
-                            of
-                            cool Kym Ellery teams up with Moda Operandi.</p>
-                        <p class="product__price">$52.00</p>
+                        <div class="product__info">
+                            <h3 class="product__name">ELLERY X M'O CAPSULE</h3>
+                            <p class="product__text">Known for her sculptural takes on&nbsp;traditional tailoring,
+                                Australian arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.</p>
+                            <p class="product__price">$52.00</p>
+                        </div>
                     </a>
                     <button class="product__button"><svg width="27" height="25" viewBox="0 0 27 25" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
@@ -261,31 +262,27 @@
             <article class="advantages__item">
                 <img src="image/free_delivery_icon.svg" alt="free delivery">
                 <h3 class="advantages__title">Free Delivery</h3>
-                <p class="advantages__text">Worldwide delivery on all. Authoritative morph next-generation innovation
-                    with
-                    extensive models.</p>
+                <p class="advantages__text">Worldwide delivery on&nbsp;all. Authoritively morph next-generation
+                    innovation with extensive models.</p>
             </article>
             <article class="advantages__item">
                 <img src="image/sales_discounts_icon.svg" alt="sales & discounts">
                 <h3 class="advantages__title">Sales & discounts</h3>
-                <p class="advantages__text">Worldwide delivery on all. Authoritative morph next-generation innovation
-                    with
-                    extensive models.</p>
+                <p class="advantages__text">Worldwide delivery on&nbsp;all. Authoritively morph next-generation
+                    innovation with extensive models.</p>
             </article>
             <article class="advantages__item">
                 <img src="image/quality_assurance_icon.svg" alt="quality assurance">
                 <h3 class="advantages__title">Quality assurance</h3>
-                <p class="advantages__text">Worldwide delivery on all. Authoritative morph next-generation innovation
-                    with
-                    extensive models.</p>
+                <p class="advantages__text">Worldwide delivery on&nbsp;all. Authoritively morph next-generation
+                    innovation with extensive models.</p>
             </article>
         </div>
         <article class="subscribe">
             <aside class="subscribe__item subscribe__item_left">
                 <img src="image/Intersect.png" alt="photo" class="subscribe__item__foto">
-                <p class="subscribe__quote">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a <i>pulvinar
-                        purus
-                        condimentum“</i></p>
+                <p class="subscribe__quote">&laquo;Vestibulum quis porttitor dui! Quisque viverra nunc mi,
+                    a&nbsp;<i>pulvinar purus condimentum&raquo;</i></p>
             </aside>
 
             <div class="subscribe__item">
